# fuelcast

./: .gitignore  README.md  SETUP.md  pixi.toml  pyproject.toml
.github/workflows/: fuelcast-daily.yml
data/: athlete.yaml  today.json
data/bloodwork/: 2026-04.yaml
site/: fuelcast.html
src/fuelcast/: __init__.py  __main__.py  athlete.py  biomarkers.py  cli.py  engine.py  training_load.py
src/fuelcast/prescriptions/: __init__.py  carbs.py  fat.py  protein.py  session.py
src/fuelcast/sources/: __init__.py  trainingpeaks.py
tests/: sample_feed.ics  test_engine.py  test_prescriptions.py  test_training_load.py  test_trainingpeaks.py
